Keep all internal URLs in object's metadata relative